...
        <StyledView className="flex flex-row items-center justify-between">
          <StyledView className="flex flex-row items-center mb-4">
            <StyledPressable
              hitSlop={50}
              onPress={() => router.back()}
              accessible={true}
              accessibilityLabel="Back"
            >
              <FontAwesomeIcon
                icon={faAngleLeft}
                size={30}
                color={colorScheme == "dark" ? "#92cace" : "#1a2c32"}
              ></FontAwesomeIcon>
...
